tests/samples/positive/modules/import_path.ax
module import_path;

import shared.util;

fn main() -> i32 {
    return twice(21) - 42;
}
