tests/samples/negative/types/empty_tuple_literal.ax
module empty_tuple_literal;

fn main() -> i32 {
    let value = ();
    return 0;
}
